--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ button {
   box-shadow: 0px 0px 7px #721b2f;
   display: flex;
   flex-direction: column;
+  border-radius: 30%;
   justify-content: space-between;
   color: whitesmoke;
 }
